<resources>
    <!--  GmAssistant  -->
    <string name="gm_panel">gm panel</string>
    <string name="manage_playlists">Playlists</string>
    <string name="manage_tracks">Audio files</string>
    <string name="manage_scenes">Scenes Board</string>
    <string name="manage_lights">Philips Hue configuration</string>
    <string name="effect_board">Effect Boards</string>

    <!--  PlaylistPanel  -->
    <string name="app_name">GM Assistant</string>
    <string name="add_playlist">add new playlist</string>
    <string name="browse_files">Browse files</string>

    <!--  AddNewPlaylist  -->
    <string name="playlist_name">Playlist name: </string>
    <string name="playlist_name_placeholder">Insert playlist name</string>
    <string name="playlist_submit">Submit</string>
    <string name="browse_device">Browse device for playlist</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="shuffle">Shuffle</string>
    <string name="end">End</string>

    <!--  FileBrowser  -->
    <string name="browse_back">previous directory</string>
    <string name="select_directory">Select current directory</string>

    <!--  HueSettings  -->
    <string name="hue_bridge_ip">Hue Bridge IP-Address:</string>
    <string name="netmask">Netmask:</string>
    <string name="hue_username">Hue username (optional):</string>
    <string name="register_device">register device</string>

    <!--  SceneConfig  -->
    <string name="scene_name">Scene Name</string>
    <string name="set_light">Set light effects</string>
    <string name="set_effect">set effect</string>
    <string name="set_music">Set music</string>
    <string name="set_ambience">set ambience</string>
    <string name="trackname_placeholder">not set</string>
    <string name="submit_scene">Submit</string>
    <string name="volume_label">Volume</string>
    <string name="play_after_effect">Play after effect</string>

    <!--  SceneHandler  -->
    <string name="add_scene">Add new scene</string>
    <string name="random_scene">Start random scene</string>

    <!--  LightConfig  -->
    <string name="submit_light">Submit</string>
    <string name="title_activity_audio_file_panel">AudioFilePanel</string>
    <string name="add_files_with_tag">add files in this category</string>
    <string name="add_bridge">Connect to Hue Bridge</string>
    <string name="change_light_in_realtime">Show changes in realtime</string>

    <!--  alert dialog  -->
    <string name="include_subdirs_message">include files in subdirectories</string>
    <string name="include_subdirs_title">select files in directory</string>

    <!--  universal buttons  -->
    <string name="ok_result">OK</string>
    <string name="cancel_result">Cancel</string>

    <!--  Boards  -->
    <string name="add_effect_board">Add board</string>
    <string name="add_effects">Add effects</string>
    <string name="no_effects">No effects on this board</string>

    <string name="hue_ip_hint">192.168.1.1</string>
    <string name="hue_bridge_name">Display name:</string>

    <string name="hue_connection_hint">Please make sure your device can access the hue bridge. Then press the link button on the hue bridge. Once your device can reach the hue bridge and the link button is pressed you can register your device</string>
    <string name="connection_successful">Successfully connected with philips hue bridge!</string>
    <string name="permission_denied">Hue bridge was found but the link button on the philips hue bridge was not pressed! To register your device, please press the button on the bridge and try again</string>
    <string name="bridge_not_found">Hue bridge could not be found in your network. Please make sure you can ping the bridge from your device. Maybe you should check your firewall</string>
    <string name="pending">Searching for hue bridge, please wait.</string>
    <string name="configure_bulbs">Pair hue bulbs.</string>
    <string name="no_devices_paired">No paired devices found. Please configure hue bridge.</string>
    <string name="pair_bridge">Configure hue bridge.</string>
    <string name="check_connection">"Please wait 5 seconds, trying to connect Philips hue bridge."</string>


    <!--   HueBulbs -->
    <string name="add_bulbs">select bulbs</string>
    <string name="brightness">Brightness</string>
    <string name="change_permanent">Reset light after effect is finished</string>


</resources>
