...
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/browse_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/select_current_directory" />

    <Button
            android:id="@+id/select_current_directory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
...
